cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
include( ../../../build/functions.cmake )
project( Jde.Opc.Tests VERSION ${JDE_VERSION} LANGUAGES CXX )
include( ../../../build/dependencies.cmake )

find_package( open62541 REQUIRED )
set( open62541Dir ${open62541_DIR}/../../.. )
cmake_path( ABSOLUTE_PATH open62541Dir NORMALIZE OUTPUT_VARIABLE open62541Dir )
link_directories( ${open62541Dir}/lib )
add_definitions( -DUA_ENABLE_ENCRYPTION )
if( WIN32 )
	add_definitions( -DZLIB_USE_STATIC_LIBS )
	set( ZLIB_ROOT ${LIB_DIR}/zlib )
else()
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		link_directories( ${JSONNET_DIR}/lib )
	endif()
endif()
find_package( ZLIB REQUIRED )

set( targetName Jde.Opc.Tests )
add_executable( ${targetName} )
compileOptions( ${targetName} )

file( GLOB sources *.cpp **/*.cpp )
if( WIN32 )
	set_target_properties( ${targetName} PROPERTIES LINK_FLAGS ${CMAKE_EXE_LINKER_FLAGS} )
	list( APPEND sources OpcTests.rc )
endif()
file( GLOB headers *.h **/*.h )
target_sources( ${targetName} PRIVATE ${sources} ${headers} )

target_include_directories( ${targetName} PRIVATE $ENV{JDE_DIR}/include/jde/app/proto )
add_test( NAME gatewaytests COMMAND $<TARGET_FILE:Jde.Opc.Tests> -tests -settings=${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Tests.jsonnet )

if( NOT jde_Superbuild )
	add_subdirectory( ../../OpcServer/src ../../../apps/OpcServer/lib )
	add_subdirectory( ../../AppServer/src ../../../apps/AppServer/lib )
endif()

find_package( GTest REQUIRED )
include_directories( ${open62541Dir}include )
target_link_libraries( ${targetName} GTest::gtest )

target_link_libraries( ${targetName} Jde Jde.QL Jde.App.Shared Jde.App.Client Jde.Web.Client Jde.Web.Server Jde.App.ServerLib Jde.Opc Jde.Opc.GatewayLib Jde.Opc.ServerLib )
#target_link_libraries( ${targetName} protobuf::libprotobuf ) //Jde.Web.Server should bring this in
if( WIN32 )
	target_link_libraries( ${targetName} Iphlpapi.lib )
else()
	target_link_libraries( ${targetName} OpenSSL::SSL )
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		target_link_libraries( ${targetName} libjsonnet++.so libjsonnet.so )
	endif()
endif()

add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E create_symlink "$ENV{JDE_BASH}/libs/db/config/common-meta.libsonnet" "$ENV{JDE_BASH}/apps/OpcServer/config/common-meta.libsonnet" COMMENT "mklink common-meta.libsonnet" )
if( WIN32 )
	set_target_properties( ${targetName} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "-tests -settings=${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Tests.jsonnet" )
	copyCommonDlls()
	add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${MULTI_INSTALL_PREFIX}/libxml2/bin/libxml2$<IF:$<CONFIG:Debug>,d,>.dll" $<TARGET_FILE_DIR:${targetName}>  COMMENT "libxml2$<IF:$<CONFIG:Debug>,d,>.dll" )
endif()
target_precompile_headers( ${targetName} PRIVATE
	pc.h
)