cmake_minimum_required( VERSION ${MIN_REQ_CMAKE_VERSION} )
include( ${CMAKE_CURRENT_LIST_DIR}/../../../build/functions.cmake )
project( Jde.Opc.Server.Tests VERSION ${JDE_VERSION} LANGUAGES CXX )
include( ${jdeRoot}/build/dependencies.cmake )

find_package( open62541 REQUIRED )
if( WIN32 )
	add_definitions( -DZLIB_USE_STATIC_LIBS )
	set( ZLIB_ROOT ${CMAKE_INSTALL_PREFIX}/zlib )
else()
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		link_directories( ${JSONNET_DIR}/lib )
	endif()
endif()
find_package( ZLIB REQUIRED )

set( targetName Jde.Opc.Server.Tests )
add_executable( ${targetName} )
compileOptions( ${targetName} )
if( WIN32 )
	target_compile_definitions( ${targetName} PRIVATE NOMINMAX )
endif()

file( GLOB sources *.cpp */*.cpp )
if( WIN32 )
	list( APPEND sources Opc.Server.Tests.rc )
	add_dependencies( ${targetName} Jde.DB.Odbc )
else()
	add_dependencies( ${targetName} Jde.DB.MySql )
endif()
file( GLOB headers *.h */*.h )
target_sources( ${targetName} PRIVATE ${sources} ${headers} )

if( NOT jde_Superbuild )
	add_subdirectory( ../../AppServer/src ../../../apps/AppServer/lib )
endif()

find_package( GTest REQUIRED )
target_link_libraries( ${targetName} GTest::gtest )
target_link_libraries( ${targetName} Jde.App.ServerLib Jde.Opc.ServerLib )
if( WIN32 )
	target_link_libraries( ${targetName} Iphlpapi.lib )
else()
	if( NOT CMAKE_BUILD_TYPE STREQUAL "Debug" )
		target_link_libraries( ${targetName} libjsonnet++.so libjsonnet.so )
	endif()
endif()

addJdeTest( ${targetName} ${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Server.Tests.jsonnet )

if( WIN32 )
	set_target_properties( ${targetName} PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS "-tests -settings=${CMAKE_CURRENT_SOURCE_DIR}/config/Opc.Server.Tests.jsonnet" )
	copyCommonDlls()
	add_custom_command( TARGET ${targetName} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_INSTALL_PREFIX}/libxml2/bin/libxml2.dll" $<TARGET_FILE_DIR:${targetName}>  COMMENT "libxml2.dll" )
endif()

target_precompile_headers( ${targetName} PRIVATE pc.h )